@@ -745,6 +745,7 @@ AC_SUBST(LIBNETSNMP_CFLAGS)
 AC_SUBST(LIBNETSNMP_LDFLAGS)
 AC_SUBST(LIBUSB_CFLAGS)
 AC_SUBST(LIBUSB_LDFLAGS)
+AC_SUBST(HAL_USER)
 AC_SUBST(LIBHAL_CFLAGS)
 AC_SUBST(LIBHAL_LDFLAGS)
 AC_SUBST(DRIVER_BUILD_LIST)
