@@ -35,6 +35,8 @@
 
 #include <hal/libhal.h>
 
+/* FIXME: export command and RW variables (using the HAL example: addon-cpufreq and macbook addon) */ 
+
 /*
  *	static	int	sockfd = -1, stale = 1, alarm_active = 0;
  *	static	struct	st_tree_t	*dtree_root = NULL;
@@ -47,16 +49,20 @@
  
 struct	ups_handler	upsh;
 
+LibHalChangeSet *cs;
 LibHalContext *ctx;
 const char *udi;
 DBusError error;
+
+int ac_present = 0; /* 0 = false ; 1 = true */
+static void* runtime_handler(char* runtime);
 
 /* Structure to lookup between NUT and HAL */
 typedef struct {
 	char	*nut_name;		/* NUT variable name */
 	char	*hal_name;		/* HAL variable name */
 	int	hal_type;		/* HAL variable type */
-	char    *(*fun)(char *value);	/* conversion function. */
+	void    *(*fun)(char *value);	/* conversion function. */
 } info_lkp_t;
 
 enum hal_type_t
@@ -70,12 +76,19 @@ enum hal_type_t
 /* Data to lookup between NUT and HAL for dstate_setinfo() */
 static info_lkp_t nut2hal[] =
 {
+	/* AQ note: Not sure it fits!
+	{ "battery.voltage.current", "battery.voltage", HAL_TYPE_INT, NULL },
+	{ "battery.voltage.nominal", "battery.voltage.design", HAL_TYPE_INT, NULL },
+	*/
+	{ "battery.charge.low", "battery.charge_level.low", HAL_TYPE_INT, NULL },
+	{ "battery.charge.low", "battery.reporting.low", HAL_TYPE_INT, NULL },
 	{ "battery.charge", "battery.charge_level.current", HAL_TYPE_INT, NULL },
 	{ "battery.charge", "battery.charge_level.percentage", HAL_TYPE_INT, NULL },
 	{ "battery.charge", "battery.reporting.current", HAL_TYPE_INT, NULL },
 	{ "battery.charge", "battery.reporting.percentage", HAL_TYPE_INT, NULL },
-	{ "battery.runtime", "battery.remaining_time", HAL_TYPE_INT, NULL },
+	{ "battery.runtime", "battery.remaining_time", HAL_TYPE_INT, *runtime_handler },
 	{ "battery.type", "battery.technology", HAL_TYPE_STRING, NULL },
+	{ "battery.type", "battery.reporting.technology", HAL_TYPE_STRING, NULL },
 	{ "ups.mfr", "battery.vendor", HAL_TYPE_STRING, NULL },
 	{ "ups.model", "battery.model", HAL_TYPE_STRING, NULL },
 	{ "ups.serial", "battery.serial", HAL_TYPE_STRING, NULL },
@@ -86,11 +99,39 @@ static info_lkp_t nut2hal[] =
 /* Functions to lookup between NUT and HAL */
 static info_lkp_t *find_nut_info(const char *nut_varname, info_lkp_t *prev_info_item);
 
-int convert_to_int(char *value)
+static int convert_to_int(char *value)
 {
 	int intValue = atoi(value);
 	return intValue;
 }
+
+/* Handle runtime exposition according to the AC status */
+static void* runtime_handler(char* runtime)
+{
+	if (ac_present == 0) {
+
+		/* unSet the runtime auto computation and rely upon NUT.battery.runtime*/
+		libhal_changeset_set_property_bool (cs,
+				"battery.remaining_time.calculate_per_time", FALSE);
+
+		/* Set the runtime value */
+		libhal_changeset_set_property_int (cs, "battery.remaining_time",
+				atoi(runtime));
+	}
+	else {
+
+		/* Set the runtime auto computation */
+		libhal_changeset_set_property_bool (cs,
+				"battery.remaining_time.calculate_per_time", TRUE);
+
+		/* Set the runtime value */
+		libhal_changeset_set_property_int (cs, "battery.remaining_time", 0);
+
+	}
+
+	return NULL;
+}
+
 
 /********************************************************************
  * dstate compatibility interface
@@ -99,11 +140,16 @@ void dstate_init(const char *prog, const char *port)
 {
 	dbus_error_init (&error);
 
+	cs = libhal_device_new_changeset (udi);
+	if (cs == NULL) {
+		fatalx ("Cannot initialize changeset");
+	}
+
 	/* UPS always report charge as percent */
-	libhal_device_set_property_string (
-			ctx, udi, "battery.charge_level.unit", "percent", &error);
-	libhal_device_set_property_string (
-			ctx, udi, "battery.reporting.unit", "percent", &error);
+	libhal_changeset_set_property_string (
+			cs, "battery.charge_level.unit", "percent");
+	libhal_changeset_set_property_string (
+			cs, "battery.reporting.unit", "percent");
 
 	/* Various UPSs assumptions */
 	/****************************/
@@ -112,39 +158,45 @@ void dstate_init(const char *prog, const char *port)
          * into battery.rechargeable
 	 * or always expose it?
          */
-	libhal_device_set_property_bool (
-		ctx, udi, "battery.is_rechargeable", TRUE, &error);
+	libhal_changeset_set_property_bool (
+		cs, "battery.is_rechargeable", TRUE);
 
 	/* UPS always has a max battery charge of 100 % */
-	libhal_device_set_property_int (
-		ctx, udi, "battery.charge_level.design", 100, &error);
-	libhal_device_set_property_int (
-		ctx, udi, "battery.charge_level.last_full", 100, &error);
-	libhal_device_set_property_int (
-		ctx, udi, "battery.reporting.design", 100, &error);
-	libhal_device_set_property_int (
-		ctx, udi, "battery.reporting.last_full", 100, &error);
+	libhal_changeset_set_property_int (
+		cs, "battery.charge_level.design", 100);
+	libhal_changeset_set_property_int (
+		cs, "battery.charge_level.last_full", 100);
+	libhal_changeset_set_property_int (
+		cs, "battery.reporting.design", 100);
+	libhal_changeset_set_property_int (
+		cs, "battery.reporting.last_full", 100);
 
 	/* UPS always have a battery! */
 	/* Note(AQU): wrong with some solar panel usage, where the UPS */
 	/* is just an energy source switch! */
 	/* FIXME: to be processed (need possible NUT extension) */
-	libhal_device_set_property_bool (ctx, udi, "battery.present", TRUE, &error);
+	libhal_changeset_set_property_bool (cs, "battery.present", TRUE);
 
 	/* Set generic properties */
-	libhal_device_set_property_string (ctx, udi, "battery.type", "ups", &error);
+	libhal_changeset_set_property_string (cs, "battery.type", "ups");
 	libhal_device_add_capability (ctx, udi, "battery", &error);
 	
 	/* FIXME: what's that? (from addon-hidups) */
 	/* UPS_DEVICENAME
-	libhal_device_set_property_string (
-	ctx, udi, "foo", ups_get_string (fd, uref.value), &error); */
+	libhal_changeset_set_property_string (
+	cs, "foo", ups_get_string (fd, uref.value)); */
 
+	dbus_error_init (&error);
+	/* NOTE: commit_changeset won't do IPC if set is empty */
+	libhal_device_commit_changeset (ctx, cs, &error);
+	libhal_device_free_changeset (cs);
 }
 
 
 const char *dstate_getinfo(const char *var)
 {
+	/* FIXME: use revert lookup from nut2hal_info or
+	from raw NUT info? */
 	return NULL;
 }
 
@@ -159,25 +211,40 @@ int dstate_setinfo(const char *var, const char *fmt, ...)
 	vsnprintf(value, sizeof(value), fmt, ap);
 	va_end(ap);
 
+	cs = libhal_device_new_changeset (udi);
+	if (cs == NULL) {
+		fatalx ("Cannot initialize changeset");
+	}
+
 	/* Loop on getting HAL variable(s) matching this NUT variable */
 	while ( (nut2hal_info = find_nut_info(var, prev_nut2hal_info)) != NULL)
 	{
-		switch (nut2hal_info->hal_type)
-		{
-			case HAL_TYPE_INT:
-				libhal_device_set_property_int (ctx, udi, nut2hal_info->hal_name,
-						atoi(value), &error);
-				break;
-			case HAL_TYPE_BOOL:
-				/* FIXME: howto lookup TRUE/FALSE? */
-				libhal_device_set_property_bool (ctx, udi, nut2hal_info->hal_name, TRUE, &error);
-				break;
-			case HAL_TYPE_STRING:
-				libhal_device_set_property_string (ctx, udi, nut2hal_info->hal_name, value, &error);
-				break;
+		upsdebugx(2, "dstate_setinfo: %s => %s (%s)\n", var, nut2hal_info->hal_name, value);
+
+		if (nut2hal_info->fun != NULL)
+			nut2hal_info->fun(value);
+		else {
+			switch (nut2hal_info->hal_type)
+			{
+				case HAL_TYPE_INT:
+					libhal_changeset_set_property_int (cs, nut2hal_info->hal_name,
+							atoi(value));
+					break;
+				case HAL_TYPE_BOOL:
+					/* FIXME: howto lookup TRUE/FALSE? */
+					libhal_changeset_set_property_bool (cs, nut2hal_info->hal_name, TRUE);
+					break;
+				case HAL_TYPE_STRING:
+					libhal_changeset_set_property_string (cs, nut2hal_info->hal_name, value);
+					break;
+			}
 		}
 		prev_nut2hal_info = nut2hal_info;
 	}
+
+	dbus_error_init (&error);
+	libhal_device_commit_changeset (ctx, cs, &error);
+	libhal_device_free_changeset (cs);
 
 	return ret;
 }
@@ -226,40 +293,53 @@ void status_set(const char *buf)
 {
 	upsdebugx(2, "status_set: %s\n", buf);
 
+	cs = libhal_device_new_changeset (udi);
+	if (cs == NULL) {
+		fatalx ("Cannot initialize changeset");
+	}
+
 	/* Note: only usbhid-ups supported devices expose [DIS]CHRG status */
 	/* along with the standard OL (online) / OB (on battery) status! */
 	if ( (strcmp(buf, "DISCHRG") == 0) || (strcmp(buf, "OB") == 0) )
 	{
+		ac_present = 0;
+
 		/* Set AC present status */
 		/* Note: UPSs are also AC adaptors! */
-		libhal_device_set_property_bool (ctx, udi,
-				"ac_adaptor.present", FALSE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"ac_adaptor.present", FALSE);
 
 		/* Set discharging status */
-		libhal_device_set_property_bool (ctx, udi,
-				"battery.rechargeable.is_discharging", TRUE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"battery.rechargeable.is_discharging", TRUE);
 		
 		/* Set charging status */
-		libhal_device_set_property_bool (ctx, udi,
-				"battery.rechargeable.is_charging", FALSE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"battery.rechargeable.is_charging", FALSE);
 	}
 	else if ( (strcmp(buf, "CHRG") == 0) || (strcmp(buf, "OL") == 0) )
 	{
+		ac_present = 1;
+
 		/* Set AC present status */
 		/* Note: UPSs are also AC adaptors! */
-		libhal_device_set_property_bool (ctx, udi,
-				"ac_adaptor.present", TRUE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"ac_adaptor.present", TRUE);
 
 		/* Set charging status */
-		libhal_device_set_property_bool (ctx, udi,
-				"battery.rechargeable.is_charging", TRUE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"battery.rechargeable.is_charging", TRUE);
 
 		/* Set discharging status */
-		libhal_device_set_property_bool (ctx, udi,
-				"battery.rechargeable.is_discharging", FALSE, &error);
+		libhal_changeset_set_property_bool (cs,
+				"battery.rechargeable.is_discharging", FALSE);
 	}
 	else 
 		upsdebugx(2, "status_set: dropping status %s (not managed)\n", buf);
+
+	dbus_error_init (&error);
+	libhal_device_commit_changeset (ctx, cs, &error);
+	libhal_device_free_changeset (cs);
 
 	return;
 }
@@ -300,7 +380,7 @@ static info_lkp_t *find_nut_info(const char *nut_varname, info_lkp_t *prev_info_
 		info_item = nut2hal;
 	}
 
-	for ( ; info_item->nut_name != NULL ; info_item++) {
+	for ( ; info_item != NULL && info_item->nut_name != NULL ; info_item++) {
 
 		if (!strcasecmp(info_item->nut_name, nut_varname))
 			return info_item;
